11 March 2005 Pierre Alliez
- initial version